--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               </div>
            </div>
             
-              <div class="banner flex">
+              <div class="banner">
                 <div class="right-sec">
                     <h1>Need a website?</h1>
                     <p>Let's build your online presence</p>
